fix index and TaskList page errors